# computer-use-windows

./: .gitignore  .mcp.json  CLAUDE.md  README.md  comfyui_vision.py  computer_use_agent.py  computer_use_mcp.py  example.py  florence_vision.py  pyproject.toml  requirements.txt  test_mcp.ps1  vision_tools.py
.github/workflows/: ci.yml
tests/: test_imports.py
